--- a/MedacDent.html
+++ b/MedacDent.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="./img/Medacdent_logo" alt="MedacDent">
+        <img src="./img/Medadent_logo.png" alt="MedacDent">
     </header>
     <main>
         <form id="my-form">
@@ -20,11 +20,20 @@
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" placeholder="Nombre del paciente...">
             <br>
-            <label for="age">Age:</label>
-            <input type="number" id="age" name="age" placeholder="Enter your age...">
+            <label for="apellidos">Apellidos:</label>
+            <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos del paciente...">
             <br>
-            <label for="hobby">Hobby:</label>
-            <input type="text" id="hobby" name="hobby" placeholder="Enter your hobby...">
+            <label for="id">ID:</label>
+            <input type="text" id="id" name="id" placeholder="id del paciente...">
+            <br>
+            <label for="fechanacimiento">Fecha de nacimiento:</label>
+            <input type="date" id="fechanacimiento" name="fechanacimiento">
+            <br>
+            <label for="telefono">Telefono:</label>
+            <input type="number" id="telefono" name="telefono" placeholder="Telefono del paciente...">
+            <br>
+            <label for="observaciones">Observaciones:</label>
+            <input type="text" id="observaciones" name="observaciones" placeholder="Enter your hobby...">
             <br>
             <input type="submit" />
         </form>
@@ -35,7 +44,8 @@
             <tr>
                 <th>Nombre</th>
                 <th>age</th>
-                <th>Nombre</th>
+                <th>codigo</th>
+                <th>hobby</th>
             </tr>
         </table>
         <script src='main.js'></script>
