--- a/MedacDent.html
+++ b/MedacDent.html
@@ -23,22 +23,22 @@
             <form id="citaForm">
                 <fieldset>
                     <legend>Datos del paciente</legend>
-                    <label for="nombre">Nombre:</label>
+                    <label for="nombre">Nombre:</label><br>
                     <input type="text" id="nombre" name="nombre" placeholder="Nombre del paciente...">
                     <br>
-                    <label for="apellidos">Apellidos:</label>
+                    <label for="apellidos">Apellidos:</label><br>
                     <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos del paciente...">
                     <br>
-                    <label for="id">ID:</label>
+                    <label for="id">ID:</label><br>
                     <input type="text" id="id" name="id" placeholder="id del paciente...">
                     <br>
-                    <label for="fechanacimiento">Fecha de nacimiento:</label>
+                    <label for="fechanacimiento">Fecha de nacimiento:</label><br>
                     <input type="date" id="fechanacimiento" name="fechanacimiento">
                     <br>
-                    <label for="telefono">Telefono:</label>
+                    <label for="telefono">Telefono:</label><br>
                     <input type="number" id="telefono" name="telefono" placeholder="Telefono del paciente...">
                     <br>
-                    <label for="observaciones">Observaciones:</label>
+                    <label for="observaciones">Observaciones:</label><br>
                     <br>
                     <textarea id="observaciones" name="observaciones" placeholder="Observaciones" rows="4" cols="27"
                         maxlength="300"></textarea>
@@ -46,14 +46,15 @@
                 </fieldset>
                 <fieldset>
                     <legend>Cita</legend>
-                    <label for="fechacita">fecha de la cita:</label>
-                    <input type="date" id="fechacita" name="fechacita" min="">
+                    <label for="fechacita">fecha de la cita:</label><br>
+                    <input type="date" id="fechacita"  class="fechacita" name="fechacita" min="">
                     <br>
-                    <label for="horacita">hora de la cita:</label>
-                    <select name="hora" id="hora" required></select>
-                    <select name="minuto" id="minuto" required></select>
+                    <label for="horacita">hora de la cita:</label><br>
+                    <select name="hora" id="hora" class="hora" required></select>
+                    <select name="minuto" id="minuto" class="minuto" required></select>
                 </fieldset>
-                <input type="submit" value="Crear" />
+                <input type="submit" value="Crear" id="submitForm"/>
+                <input type="button" value="Actualizar" id="actualizarForm" onclick="actualizarTabla()" />
             </form>
         </div>
 
@@ -78,50 +79,14 @@
                 </tbody>
             </table>
         </div>
-        <div id="Form3">
+        <div id="buscarForm">
             <form id="buscarcita">
                 <label for="cita">ID del paciente:</label>
                 <input type="text" id="cita" name="cita" placeholder="id del paciente...">
                 <input type="button" id="botonbuscar" value="Buscar" onclick="buscarcita()">
             </form>
         </div>
-        <div id="Form2">
-            <form id="actualizarForm">
-                <fieldset>
-                    <legend>Datos del paciente</legend>
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" placeholder="Nombre del paciente...">
-                    <br>
-                    <label for="apellidos">Apellidos:</label>
-                    <input type="text" id="apellidos" name="apellidos" placeholder="Apellidos del paciente...">
-                    <br>
-                    <label for="id">ID:</label>
-                    <input type="text" id="id" name="id" placeholder="id del paciente...">
-                    <br>
-                    <label for="fechanacimiento">Fecha de nacimiento:</label>
-                    <input type="date" id="fechanacimiento" name="fechanacimiento">
-                    <br>
-                    <label for="telefono">Telefono:</label>
-                    <input type="number" id="telefono" name="telefono" placeholder="Telefono del paciente...">
-                    <br>
-                    <label for="observaciones">Observaciones:</label>
-                    <br>
-                    <textarea id="observaciones" name="observaciones" placeholder="Observaciones" rows="4" cols="27"
-                        maxlength="300"></textarea>
-                    <br>
-                </fieldset>
-                <fieldset>
-                    <legend>Cita</legend>
-                    <label for="fechacita">fecha de la cita:</label>
-                    <input type="date" id="fechacita" name="fechacita" min="">
-                    <br>
-                    <label for="horacita">hora de la cita:</label>
-                    <select name="hora" id="hora" required></select>
-                    <select name="minuto" id="minuto" required></select>
-                </fieldset>
-                <input type="button" value="Actualizar" onclick="actualizarTabla()" />
-            </form>
-        </div>
+ 
         <script src='main.js'></script>
     </main>
     <footer>
